--- a/Hranfurkt.html
+++ b/Hranfurkt.html
@@ -3,58 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HranFurkt</title>
+  <title>VemTO</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 0; background: #f0f0f0; }
+    body { font-family: Arial, sans-serif; margin: 0; background: #98DF2D; }
     nav {
-      background: #333;
-      color: white;
+      background: #043;
+      color: black;
       padding: 1em;
       text-align: center;
-    }
-    nav a {
-      color: white;
-      margin: 0 15px;
-      text-decoration: none;
-    }
-    section {
-      padding: 50px;
-      background: white;
-      margin: 20px;
-      border-radius: 10px;
-    }
-    h1, h2 {
-      color: #333;
-    }
+
   </style>
 </head>
 <body>
 
-  <nav>
-    <a href="#uvod">Úvod</a>
-    <a href="#onas">O nás</a>
-    <a href="#program">Program</a>
-    <a href="#kontakt">Kontakt</a>
-  </nav>
-
-  <section id="uvod">
-    <h1>Vítejte na stránkách HranFurkt</h1>
-    <p>Toto je úvodní sekce.</p>
-  </section>
-
-  <section id="onas">
-    <h2>O nás</h2>
-    <p>Informace o tom, kdo jsme.</p>
-  </section>
-
-  <section id="program">
-    <h2>Program</h2>
-    <p>Plánované akce a programy.</p>
-  </section>
-
   <section id="kontakt">
     <h2>Kontakt</h2>
-    <p>Email: info@hranfurkt.cz</p>
+    <p>Email: VemTO@ihned.cz</p>
   </section>
 
 </body>
