--- a/VemTO-AiChatCz.html
+++ b/VemTO-AiChatCz.html
@@ -65,7 +65,6 @@
       text-decoration: none;
     }
 
-    /* Chatbot styl */
     #chatbot {
       margin-top: 40px;
     }
@@ -165,6 +164,8 @@
     const userInput = document.getElementById('user-input');
     const sendBtn = document.getElementById('send-btn');
 
+    const OPENAI_API_KEY = "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"; // << 🔑 Sem vlož svůj OpenAI API klíč
+
     function addMessage(text, sender) {
       const div = document.createElement('div');
       div.classList.add('message', sender);
@@ -173,33 +174,39 @@
       chatWindow.scrollTop = chatWindow.scrollHeight;
     }
 
-    function getBotResponse(input) {
-      const text = input.toLowerCase();
+    async function getBotResponse(userMessage) {
+      try {
+        const response = await fetch("https://api.openai.com/v1/chat/completions", {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json",
+            "Authorization": `Bearer ${OPENAI_API_KEY}`
+          },
+          body: JSON.stringify({
+            model: "gpt-3.5-turbo", // nebo gpt-4 pokud máš
+            messages: [
+              { role: "system", content: "Jsi přátelský pomocník pro zákazníky VemTO.cz. Odpovídej česky." },
+              { role: "user", content: userMessage }
+            ],
+            max_tokens: 200,
+            temperature: 0.7
+          })
+        });
 
-      if (["ahoj", "čau", "nazdar"].includes(text)) {
-        return "Ahoj! Jak ti můžu pomoct?";
+        const data = await response.json();
+        const botMessage = data.choices?.[0]?.message?.content || "Promiň, něco se pokazilo.";
+        addMessage(botMessage, 'bot');
+      } catch (error) {
+        console.error("Chyba při volání OpenAI API:", error);
+        addMessage("⚠️ Nepodařilo se spojit s chatbotem. Zkus to znovu.", 'bot');
       }
-      if (text.includes("jak se máš")) {
-        return "Mám se dobře, děkuji za optání!";
-      }
-      if (text.includes("co umíš")) {
-        return "Umím odpovídat na základní otázky. Zeptej se mě!";
-      }
-      if (text.includes("kdo je einstein")) {
-        return "Albert Einstein byl známý fyzik a autor teorie relativity.";
-      }
-      if (text.includes("špagety")) {
-        return "Na špagety potřebuješ vodu, sůl a těstoviny. Vař je 8–10 minut.";
-      }
-      return "Promiň, tomu zatím nerozumím.";
     }
 
     sendBtn.addEventListener('click', () => {
       const text = userInput.value.trim();
       if (text !== "") {
         addMessage(text, 'user');
-        const response = getBotResponse(text);
-        setTimeout(() => addMessage(response, 'bot'), 500);
+        getBotResponse(text);
         userInput.value = "";
       }
     });
